Sprites for as many CSS images as I could get working.  Login nav bar link has the invisibility bug, though.  Will fix.

--- a/public/javascripts/superfish/css/superfish.css
+++ b/public/javascripts/superfish/css/superfish.css
@@ -76,13 +76,13 @@ ul.sf-menu li li li.sfHover ul {
 .sf-menu a strong	  { /* visited pseudo selector so IE6 applies text colour*/
 	position:absolute; width:100%; height:59px;
 	background:url(../../../images/menu_hover.gif) repeat-x 50% 0;
-	top:0; left:1px; 
+	top:0; left:1px;
 	z-index:5
 }
 .sf-menu li a strong	  { /* visited pseudo selector so IE6 applies text colour*/
 	position:absolute; width:100%; height:59px;
 	background:url(../../../images/menu_hover.gif) repeat-x 50% 0;
-	top:0; left:0px; 
+	top:0; left:0px;
 	z-index:5
 }
 .sf-menu a span	  { /* visited pseudo selector so IE6 applies text colour*/
@@ -104,16 +104,16 @@ ul.sf-menu li li li.sfHover ul {
 }
 
 .sf-menu li a {
-		
+
 
 	}
 .sf-menu li li {
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:13px;
 	font-weight:normal;
-	background:url(../../../images/drop_bg.gif) repeat-x 0% 0% !important;
+	background:url(../../../images/csg-4e56307fa551f.gif) repeat-x 0% 0% !important; background-position: 0 -432px;
 	border:1px solid #1a1a1a;
-	width:173px;
+  width:173px;
 	line-height:46px
 }
 	.sf-menu li li a {
@@ -135,7 +135,7 @@ ul.sf-menu li li li.sfHover ul {
 		border-bottom:none;
 	}
 .sf-menu li li li {
-	
+
 }
 .sf-menu li:hover, .sf-menu li.sfHover,
 .sf-menu a:focus, .sf-menu a:hover, .sf-menu a:active {
